views: disable ink drops altogether on Mac

These were previously disabled piecemeal using SetInkDropMode(), but that was
not the right abstraction layer to disable them, because many other controls
individually call SetInkDropMode() to customize their own behavior. Instead,
disable it inside InkDropHostView.

BUG=701888

Review-Url: https://codereview.chromium.org/2833133003
Cr-Commit-Position: refs/heads/master@{#466642}

Former-commit-id: 5d32b67b86c16add90f6ac864d9741a959435ca1